# pims-admm-llm

./: .gitignore  HERMES-IMPROVEMENT-META-SKILL.md  LICENSE  README.md  pyproject.toml  requirements-api.txt  requirements.txt
api/: README.md  __init__.py  main.py
data/: product_specs.json  routing.json  synthetic_crudes.json
demos/: __init__.py  bench_parallel.py  bench_parallel_last.json  bench_scaleup.py  run_agent_layer.py  run_assay_cdu_demo.py  run_cdu_fcc_demo.py  run_crude_cat_blender_demo.py  run_demo.py  run_excel_pipeline_demo.py  run_full_plant_demo.py  run_multi_period_demo.py  run_portfolio_smoke.sh  run_process_network_agents.py  run_process_pool_demo.py  shadow_price_report.py
docs/: .worker8_stamp  admm-vs-dantzig-wolfe.md  architecture.md  base_delta_units.md  ci-workflow.example.yml  crude_cat_blender.md  excel_mvp_handoff.md  parallel_solvers.md  portfolio.md  pure_admm_floor.md  quality_blender.md  residuals.md  routing.md  shadow_prices.md  story.md  tf_linear_blocks.md  wave5-ci-note.md
tests/: test_admm_coordinator.py  test_agents.py  test_api_excel.py  test_api_graph.py  test_assay_loader.py  test_assay_swing_cdu.py  test_base_delta_cdu_fcc.py  test_crude_cat_blender.py  test_excel_pipeline.py  test_full_plant.py  test_graph_process_conditions.py  test_models.py  test_multi_period.py  test_process_network_agents.py  test_process_pool.py  test_pure_admm_harden.py  test_quality_blender.py  test_quality_recursive.py  test_shadow_prices.py  test_smoke.py  test_tf_import_isolation.py  test_tf_linear_block.py  test_tf_linear_cdu.py  (+43 more)
(+82 files in other folders)
